[package]
name = "rust-gcs"
version = "0.1.0"
authors = ["Solomon Boulos <boulos@google.com>"]
# We want async/await
edition = "2018"

description = "A library for accessing Google Cloud Storage via its JSON API."
license = "Apache-2.0"

[dependencies]
bytes = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dirs = "3.0"
env_logger = "*"
fuser = { version = "0.7", features = ["abi-7-30"] }
futures = "0.3.8"
http = "*"
hyper = { version = "0.14.*", features = [ "http1", "http2", "client", "runtime", "stream"] }
hyper-rustls = "0.22.*"
lazy_static = "*"
libc = "*"
log = "*"
oauth2 = "*"
openssl = "*"
rayon = "*"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_with = "*"
tame-oauth = "*"
tempdir = "0.3"
tempfile = "3.1"
time = "*"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "*"
