[package]
name = "gcsfuser"
version = "0.1.0"
authors = ["Solomon Boulos <boulos@google.com>"]
# We want async/await
edition = "2018"

description = "A library for accessing Google Cloud Storage via its JSON API."
license = "Apache-2.0"

[features]
# Optional "unreliable" mode instead of using truncated, exponential backoff.
# Mostly just for testing / verifying purposes.
unreliable = []

[dependencies]
bytes = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2" }
dirs = "3.0"
env_logger = "0.8"
fuser = { version = "0.8", features = ["abi-7-30"] }
futures = "0.3.8"
http = "0.2"
hyper = { version = "0.14.*", features = [ "http1", "http2", "client", "runtime", "stream"] }
hyper-rustls = "0.22.*"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
oauth2 = "2.0"
openssl = "0.10"
rand = { version = "0.8", features = [ "small_rng" ] }
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1.6"
tame-oauth = "0.4"
tempdir = "0.3"
tempfile = "3.1"
time = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.1"
