[package]
name = "gcsfuser"
version = "0.1.0"
authors = ["Solomon Boulos <boulos@google.com>"]
# We want async/await
edition = "2018"

description = "A library for accessing Google Cloud Storage via its JSON API."
license = "Apache-2.0"

[features]
# Optional "unreliable" mode instead of using truncated, exponential backoff.
# Mostly just for testing / verifying purposes.
unreliable = []

[dependencies]
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
# Include the cargo feature for clap, to get crate_version!
clap = { version = "3", features = ["cargo"] }
env_logger = "0.9"
fuser = { version = "0.9", features = ["abi-7-30"] }
futures = "0.3.8"
http = "0.2"
hyper = { version = "0.14.*", features = [ "http1", "http2", "client", "runtime", "stream"] }
hyper-rustls = "0.22.*"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
openssl = "0.10"
rand = { version = "0.8", features = [ "small_rng" ] }
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1.9"
tame-oauth = "0.6"
tempfile = "3.2"
time = "0.3"
tokio = { version = "1.8", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
url = "2.1"
